[package]
name = "etender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["blocking", "json", "cookies"] }
regex = "1.9.6"
docx-rs = "0.4.7"
chrono = "0.4.31"
rusty-tesseract = "1.1.7"
base64_light = "0.1.5"
zip = { version = "0.6.6", default-features = false }
calamine = "0.22.0"
strsim = "0.10.0"
num-format = "0.4.4"
serde_json = "1.0"
flate2 = "1.0"
tar = "0.4"
